Changing switch enhancements to be preview features