@@ -22,6 +22,9 @@
  */
 
 // key: compiler.warn.break.ambiguous.target
+// key: compiler.note.preview.filename
+// key: compiler.note.preview.recompile
+// options: --enable-preview -source 12
 
 class BreakAmbiguousTarget {
     void m(int i, int j) {
