@@ -22,6 +22,9 @@
  */
 
 // key: compiler.err.continue.outside.switch.expression
+// key: compiler.note.preview.filename
+// key: compiler.note.preview.recompile
+// options: --enable-preview -source 12
 
 class ContinueOutsideSwitchExpression {
     int t(int i) {
