@@ -22,6 +22,9 @@
  */
 
 // key: compiler.err.switch.case.unexpected.statement
+// key: compiler.note.preview.filename
+// key: compiler.note.preview.recompile
+// options: --enable-preview -source 12
 
 class ReturnOutsideSwitchExpression {
     void t(int i) {
