@@ -22,6 +22,9 @@
  */
 
 // key: compiler.err.switch.mixing.case.types
+// key: compiler.note.preview.filename
+// key: compiler.note.preview.recompile
+// options: --enable-preview -source 12
 
 class SwitchMixingCaseTypes {
 
